--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -8,8 +8,8 @@
 	<meta name="author" content="">
 
 	<!-- Le styles -->
-	<link href="file:///Users/jspurlock/Sites/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
-	<link href="file:///Users/jspurlock/Sites/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-responsive.css" rel="stylesheet">
 	<style type="text/css">
 		body { padding-top: 60px; padding-bottom: 40px; }
 		.show-grid {
