--- a/Test/index.html
+++ b/Test/index.html
@@ -1,13 +1,16 @@
-
-<table style="width:100%" background="myback.gif">
+<!DOCTYPE html>
+<HTML>
+<HEAD>     
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <title>Page Title</title>
+</HEAD>
+<BODY>
+<table style="width:100%" background="images/image.jpeg">
   <tr>
     <td>Jill</td>
     <td>Smith</td> 
     <td>50</td>
   </tr>
-  <tr>
-    <td>Eve</td>
-    <td>Jackson</td> 
-    <td>94</td>
-  </tr>
 </table>
+</BODY>
+</HTML>
