--- a/Test/index.html
+++ b/Test/index.html
@@ -1,16 +1,110 @@
 <!DOCTYPE html>
-<HTML>
+<HTML ng-app="MyApp">
 <HEAD>     
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Page Title</title>
+  <script src="js/angular.min.js"></script>
+  <script src="js/MainController.js"></script>
+  <script type="text/javascript">
+  	var counterr = 0;
+  </script>
 </HEAD>
-<BODY>
-<BODY>
-<table>
-  <tr>
-    <td></td>
-    <td></td>
-  </tr>
+<BODY ng-controller="MainController">
+<p ng-show="false">{{template="page1";}}</p>
+  <table>
+  <tbody>
+    <tr ng-repeat="rows in data">
+	  <td ng-repeat="col in rows"> <ng-include src="template"></ng-include></td>
+    </tr>
+  </tbody>
+  </table>
+
+  <script type="text/ng-template" id="page1">
+  <table style="height: 200px; width:370px; background-image:url(images/bg.png); background-repeat: no-repeat;">
+<tbody>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td colspan="5" rowspan="8" background="images/photo.png" style="background-repeat:background-position: right top;">&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td colspan="2">&nbsp;{{students[col].firstName;}}</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
+</tbody>
 </table>
-</BODY>
+  </script>
+
+  </BODY>
 </HTML>
