--- a/Test/index.html
+++ b/Test/index.html
@@ -3,6 +3,7 @@
 <HEAD>     
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Page Title</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="js/angular.min.js"></script>
   <script src="js/MainController.js"></script>
   <script type="text/javascript">
